--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,84 @@
     transform: rotate(360deg);
   }
 }
+.section-link{
+  text-decoration: none;
+  color:black
+}
+footer{
+  background-image: url(https://www.edyoda.com/static/media/FooterBg.0d54e96d.png);
+  color:#f5f5f5;
+  font-family: 'Roboto', sans-serif;
+}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
+footer {
+    font-family: 'Roboto', sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #f5f5f5;
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  
+}
+.footer-section-first{
+  margin-left:15%;
+}
+.footer-section-last{
+  margin-right: 10%;
+}
+.footer-column {
+  flex: 1;
+}
+
+.footer-column h3 {
+  font-size: 1.17em;
+  font-weight: 500;
+  margin-bottom: 10px;
+  color: #ffffff80;
+  font-family: 'Roboto', sans-serif;
+
+}
+.edyoda{
+  font-size: 1.5em !important;
+  font-weight: 600 !important;
+  color: #f5f5f5 !important;
+}
+
+.footer-column ul {
+  list-style-type: none;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.footer-column li {
+  margin-bottom: 5px;
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.footer-column a {
+  text-decoration: none;
+  color: #f5f5f5;
+}
+.mail-img{
+  padding: 0;
+    position: relative;
+    bottom: -5px;
+    width: 20px;
+    height: 20px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+svg{
+  color: #f5f5f5;
+}
+.copyright{
+  text-align: center;
+  font-size: 10px
+}
